# Splendor-Zero

./: .gitignore  CMakeLists.txt  README.md  game_logic.cpp  native_mcts.cpp  native_mcts.h  py_splendor.cpp  state_encoder.cpp  state_encoder.h
nn/: benchmark.py  checkpoints.py  imperfect_info.py  ismcts.py  mcts.py  model.py  native_env.py  opponents.py  perf_matrix.py  replay.py  selfplay_dataset.py  state_schema.py  train.py  value_targets.py  webapp.py
spendee/: cli.py  engine_policy.py  logging.py  observer.py  runner.py  shadow_state.py  webui_save.py
tests/: mcts_reference.py  test_nn_cycle_loop.py  test_nn_native_env_runtime.py  test_nn_train_utils.py  test_policy_compare_diagnostic.py
webui/: index.html
webui/src/: App.tsx  styles.css  types.ts
webui/src/components/: ActionLabel.tsx
webui/src/components/board/: CardView.tsx  GameBoard.tsx  NobleView.tsx  PlayerStrip.tsx  TierRow.tsx  TokenPill.tsx
